crates/forge_app/src/orch_spec/snapshots/forge_app__orch_spec__orch_system_spec__system_prompt_with_extensions.snap
---
source: crates/forge_app/src/orch_spec/orch_system_spec.rs
expression: system_messages
---
You are Forge

<additional_rules>

- **CRITICAL TESTING REQUIREMENT**: Produce a working artifact at the final output path first. Then add one targeted executable check per requirement category — no duplicates. For isolated logic bugs where the failing case is obvious, write a minimal failing test first.
</additional_rules>


<system_information>
<operating_system>MacOS</operating_system>
<current_working_directory>/Users/tushar</current_working_directory>
<default_shell>bash</default_shell>
<home_directory>/Users/tushar</home_directory>
<workspace_extensions command="git ls-files" files="9" extensions="4">
 - .rs: 4 files (44%)
 - .(no ext): 2 files (22%)
 - .md: 2 files (22%)
 - .toml: 1 files (11%)
</workspace_extensions>
</system_information>
