crates/forge_app/src/orch_spec/snapshots/forge_app__orch_spec__orch_system_spec__system_prompt_with_extensions_truncated.snap
---
source: crates/forge_app/src/orch_spec/orch_system_spec.rs
expression: system_messages
---
You are Forge

<additional_rules>

- **CRITICAL TESTING REQUIREMENT**: Produce a working artifact at the final output path first. Then add one targeted executable check per requirement category — no duplicates. For isolated logic bugs where the failing case is obvious, write a minimal failing test first.
</additional_rules>


<system_information>
<operating_system>MacOS</operating_system>
<current_working_directory>/Users/tushar</current_working_directory>
<default_shell>bash</default_shell>
<home_directory>/Users/tushar</home_directory>
<workspace_extensions command="git ls-files" files="210" extensions="20">
 - .ext1: 20 files (10%)
 - .ext2: 19 files (9%)
 - .ext3: 18 files (9%)
 - .ext4: 17 files (8%)
 - .ext5: 16 files (8%)
 - .ext6: 15 files (7%)
 - .ext7: 14 files (7%)
 - .ext8: 13 files (6%)
 - .ext9: 12 files (6%)
 - .ext10: 11 files (5%)
 - .ext11: 10 files (5%)
 - .ext12: 9 files (4%)
 - .ext13: 8 files (4%)
 - .ext14: 7 files (3%)
 - .ext15: 6 files (3%)
(showing top 15 of 20 extensions; other extensions account for 8% of files)
</workspace_extensions>
</system_information>
